--- a/src/main/resources/templates/booked_rooms.html
+++ b/src/main/resources/templates/booked_rooms.html
@@ -47,7 +47,7 @@
 </head>
 <body>
 <h1>Забронированные комнаты</h1>
-<a href="/rooms/create" class="button">Создать</a>
+<button class="add-button" onclick="openForm()">Создать</button>
 <table>
   <tr>
     <th>Идентификатор</th>
@@ -71,5 +71,52 @@
     </td>
   </tr>
 </table>
+<div id="myModal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeForm()">&times;</span>
+    <h2>Create album</h2>
+    <form th:action="@{/booked_rooms/create}" method="POST">
+      <table>
+        <tr>
+          <td>Вместимость:</td>
+          <td><input type="text" name="capacity" , id="capacity"/></td>
+        </tr>
+        <tr>
+          <td>Стоимость:</td>
+          <td><input type="text" name="cost" id="cost"/></td>
+        </tr>
+        <tr>
+          <td>Статус занятости:</td>
+          <td><input type="text" name="occupationStatus" id="occupationStatus"/></td>
+        </tr>
+        <tr>
+          <td>Идентификатор справочной комнаты:</td>
+          <td>
+            <select name="referenceRoom" id="referenceRoom">
+              <option th:each="referenceRoom : ${referenceRooms}"
+                      th:value="${referenceRoom.id}"
+                      th:text="${referenceRoom.id}"
+                      th:selected="${bookedRoom != null && bookedRoom.referenceRoom != null && referenceRoom.id == bookedRoom.referenceRoom.getId()}"></option>
+            </select>
+          </td>
+
+        </tr>
+        <tr>
+          <td colspan="2">
+            <button type="submit">Create</button>
+          </td>
+        </tr>
+      </table>
+    </form>
+  </div>
+</div>
+<script>
+  function openForm() {
+    document.getElementById("myModal").style.display = "block";
+  }
+  function closeForm() {
+    document.getElementById("myModal").style.display = "none";
+  }
+</script>
 </body>
 </html>
