--- a/src/main/resources/templates/booked_rooms.html
+++ b/src/main/resources/templates/booked_rooms.html
@@ -74,7 +74,7 @@
 <div id="myModal" class="modal">
   <div class="modal-content">
     <span class="close" onclick="closeForm()">&times;</span>
-    <h2>Create album</h2>
+    <h2>Добавить забронированную комнату</h2>
     <form th:action="@{/booked_rooms/create}" method="POST">
       <table>
         <tr>
