sql query html edited header

--- a/src/main/resources/templates/sql-query.html
+++ b/src/main/resources/templates/sql-query.html
@@ -8,21 +8,7 @@
 <body>
 <div id="menu">
   <ul>
-    <li><a href="/album">Albums</a></li>
-    <li><a href="/artist">Artists</a></li>
-    <li><a href="/genre">Genres</a></li>
-    <li><a href="/carrier">Carriers</a></li>
-    <li><a href="/band">Bands</a></li>
-    <li><a href="/song">Songs</a></li>
-    <li><a href="/joining">Artists/Bands</a></li>
-    <li><a href="/containssong">Albums/Songs</a></li>
-    <li><a href="/recorded">Albums/Carriers</a></li>
-    <li><a href="/containsartist">Albums/Artists</a></li>
-    <li><a href="/containsband">Albums/Bands</a></li>
-    <li><a href="/performsartist">Songs/Artists</a></li>
-    <li><a href="/performsband">Songs/Bands</a></li>
-    <li><a href="/sql-query">SQL Query</a></li>
-  </ul>
+    <li><a href="/booked_rooms">забронированные комнаты</a></li>
 </div>
 <h1>Enter your SQL query:</h1>
 <form action="/execute-query" method="POST">
