добавлены страницы для каждой сущности

--- a/src/main/resources/templates/booked_rooms.html
+++ b/src/main/resources/templates/booked_rooms.html
@@ -42,10 +42,27 @@
 
     .button:hover {
       background-color: #333333;
+
     }
   </style>
 </head>
 <body>
+<div id="menu">
+  <ul>
+    <li><a href="/booked_rooms">Забронированные комнаты</a></li>
+    <li><a href="/reference_room">Прайс-лист</a></li>
+    <li><a href="/booking">Бронирования</a></li>
+    <li><a href="/campus">Корпусы</a></li>
+    <li><a href="/feedback">Отзывы</a></li>
+    <li><a href="/floor">Этажи</a></li>
+    <li><a href="/guest_booking">Гость.Бронирование</a></li>
+    <li><a href="/guest">Гости</a></li>
+    <li><a href="/organisation_booking">Организация.Бронирование</a></li>
+    <li><a href="/organisation">Организации</a></li>
+    <li><a href="/service_of_rooms">Обслуживание номеров</a></li>
+    <li><a href="/sql-query">SQL Query</a></li>
+  </ul>
+</div>
 <h1>Забронированные комнаты</h1>
 <button class="add-button" onclick="openForm()">Создать</button>
 <table>
