--- a/src/main/resources/templates/sql-query.html
+++ b/src/main/resources/templates/sql-query.html
@@ -8,7 +8,8 @@
 <body>
 <div id="menu">
   <ul>
-    <li><a href="/booked_rooms">забронированные комнаты</a></li>
+    <li><a href="/booked_rooms">Вернуться на главную</a></li>
+  </ul>
 </div>
 <h1>Enter your SQL query:</h1>
 <form action="/execute-query" method="POST">
